<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_home">Home</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="video">                "视频"</string>
    <string name="my">                   "我的"</string>
    <string name="account">              "我的账户"</string>
    <string name="contact">              "联系我们"</string>
    <string name="cooperation">          "商务合作"</string>
    <string name="login_out">            "退出登录"</string>
    <string name="my_wallet">            "我的账户"</string>
    <string name="remaining_sum">        "账户余额"</string>
    <string name="withdraw_deposit">     "提现"</string>
    <string name="detail">               "收支明细"</string>
    <string name="start_live">           "○发起直播"</string>
    <string name="set_cover">            "「 设置封面 」"</string>
    <string name="live_title">           "直播标题"</string>
    <string name="live_time">            "开播时间"</string>
    <string name="live_style">           "直播方式"</string>
    <string name="live_join">            "参与方式"</string>
    <string name="live_content">         "内容介绍"</string>
    <string name="live_recommend">       "推荐给参与过我直播的人"</string>
    <string name="live_share">           "分享到： "</string>

    <string name="live_set">             "未设置"</string>
    <string name="live_start">           "立即开始"</string>
    <string name="live_video">           "视频直播"</string>
    <string name="live_free">            "公开"</string>
    <string name="live_crate">           "创建"</string>
    <string name="pop_wx">               "微信"</string>
    <string name="pop_pyq">              "朋友圈"</string>
    <string name="pop_wb">               "微博"</string>
    <string name="pop_qq">               "QQ"</string>
    <string name="pop_kj">               "QQ空间"</string>
    <string name="pop_copy">             "复制链接"</string>
    <string name="pop_edit">             "编辑"</string>
    <string name="pop_delete">           "删除"</string>


    <!-- Date_Time  Dialog -->
    <string name="str_turn_back">取消</string>
    <string name="str_forward">前进</string>
</resources>
