<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/fl_live_set"
        android:background="@color/color_white"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rl_live_top"
            android:layout_margin="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.dgtis.live.imageVIew.MyCircleAngleImageView
                xmlns:melove="http://schemas.android.com/apk/res-auto"
                android:id="@+id/live_cover_img"
                android:scaleType="centerCrop"
                android:src="@drawable/live_cover_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                melove:radius="6dp"
                melove:shape_type="rectangle" />

            <TextView
                android:gravity="center"
                android:paddingLeft="@dimen/dp_4"
                android:paddingRight="@dimen/dp_6"
                android:paddingBottom="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_1"
                android:textSize="@dimen/sp_12"
                android:background="@drawable/bg_start_live"
                android:layout_margin="@dimen/dp_4"
                android:textColor="@color/color_white"
                android:text="@string/start_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:text="@string/set_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


        <!-- 直播标题 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_title"
            android:layout_below="@+id/rl_live_top"
            android:text="@string/live_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_title_go"
            android:layout_alignBaseline="@+id/live_title"
            android:id="@+id/live_title_set"
            android:hint="@string/live_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_title_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_title"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_title_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_title"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 开播时间 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_time"
            android:layout_below="@+id/live_title_line"
            android:text="@string/live_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_title_go"
            android:layout_alignBaseline="@+id/live_time"
            android:id="@+id/live_time_set"
            android:text="@string/live_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_time_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_time"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_time_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_time"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 直播方式 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_style"
            android:layout_below="@+id/live_time_line"
            android:text="@string/live_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_title_go"
            android:layout_alignBaseline="@+id/live_style"
            android:id="@+id/live_video"
            android:text="@string/live_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_video_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_style"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_video_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_style"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 参与方式 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_join"
            android:layout_below="@+id/live_video_line"
            android:text="@string/live_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_join_go"
            android:layout_alignBaseline="@+id/live_join"
            android:id="@+id/live_free"
            android:text="@string/live_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_join_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_join"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_join_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_join"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 内容介绍 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_content"
            android:layout_below="@+id/live_join_line"
            android:text="@string/live_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_content_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_content"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_content_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_content"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 推荐 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_recommend"
            android:layout_below="@+id/live_content_line"
            android:text="@string/live_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_recommend_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_recommend"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_recommend_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_recommend"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 分享 -->
        <TextView
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_gray"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_share"
            android:layout_below="@+id/live_recommend_line"
            android:text="@string/live_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/live_share"
            android:src="@drawable/wx_chosed"
            android:layout_alignBottom="@+id/live_share"
            android:id="@+id/live_share_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/live_share_wx"
            android:src="@drawable/pyq_unchose"
            android:layout_alignBottom="@+id/live_share"
            android:id="@+id/live_share_pyq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/live_share_pyq"
            android:src="@drawable/wb_unchose"
            android:layout_alignBottom="@+id/live_share"
            android:id="@+id/live_share_wb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/live_share_wb"
            android:src="@drawable/qq_unchose"
            android:layout_alignBottom="@+id/live_share"
            android:id="@+id/live_share_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/live_share_qq"
            android:src="@drawable/qqkj_unchose"
            android:layout_alignBottom="@+id/live_share"
            android:id="@+id/live_share_qqkj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_below="@+id/live_share"
            android:text="@string/live_crate"
            android:background="@drawable/shape_round_all_strokeorange"
            android:id="@+id/live_start_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <com.tencent.rtmp.ui.TXCloudVideoView
        android:visibility="gone"
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>

</FrameLayout>