<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@color/color_white"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/deit_pop_top"
        android:background="@color/color_black"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/pop_edit_cancel"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            android:text="取消"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            android:text="创建直播"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/deit_pop_top"
            android:id="@+id/rl_live_top"
            android:layout_margin="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.dgtis.live.imageVIew.MyCircleAngleImageView
                xmlns:melove="http://schemas.android.com/apk/res-auto"
                android:id="@+id/live_cover_img"
                android:scaleType="centerCrop"
                android:src="@drawable/live_cover_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                melove:radius="6dp"
                melove:shape_type="rectangle" />

            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:text="@string/set_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


        <!-- 直播标题 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_title"
            android:layout_below="@+id/rl_live_top"
            android:text="@string/live_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_title_go"
            android:layout_alignBaseline="@+id/live_title"
            android:id="@+id/live_title_set"
            android:hint="@string/live_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_title_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_title"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_title_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_title"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 开播时间 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_time"
            android:layout_below="@+id/live_title_line"
            android:text="@string/live_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/color_black"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@+id/live_title_go"
            android:layout_alignBaseline="@+id/live_time"
            android:id="@+id/live_time_set"
            android:text="@string/live_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_time_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_time"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_time_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_time"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <!-- 内容介绍 -->
        <TextView
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_8"
            android:id="@+id/live_content"
            android:layout_below="@+id/live_time_line"
            android:text="@string/live_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/color_black"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_toLeftOf="@+id/live_content_go"
        android:layout_alignBaseline="@+id/live_content"
        android:id="@+id/live_content_set"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/live_content_go"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/live_content"
            android:scaleType="fitEnd"
            android:src="@drawable/personal_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/live_content_line"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/live_content"
            android:background="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_6"/>

        <Button
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/live_content_line"
            android:text="@string/live_crate"
            android:background="@drawable/shape_round_all_strokeorange_red"
            android:id="@+id/pop_edit_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>
